; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_mountpoint-util.c_path_get_mnt_id.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_mountpoint-util.c_path_get_mnt_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AT_FDCWD = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@ENOSYS = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@EOVERFLOW = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @path_get_mnt_id(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* @AT_FDCWD, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @name_to_handle_at_loop(i32 %7, i8* %8, i32* null, i32* %9, i32 0)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @EOPNOTSUPP, align 4
  %13 = sub nsw i32 0, %12
  %14 = load i32, i32* @ENOSYS, align 4
  %15 = sub nsw i32 0, %14
  %16 = load i32, i32* @EACCES, align 4
  %17 = sub nsw i32 0, %16
  %18 = load i32, i32* @EPERM, align 4
  %19 = sub nsw i32 0, %18
  %20 = load i32, i32* @EOVERFLOW, align 4
  %21 = sub nsw i32 0, %20
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  %24 = call i64 @IN_SET(i32 %11, i32 %13, i32 %15, i32 %17, i32 %19, i32 %21, i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %2
  %27 = load i32, i32* @AT_FDCWD, align 4
  %28 = load i8*, i8** %4, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @fd_fdinfo_mnt_id(i32 %27, i8* %28, i32 0, i32* %29)
  store i32 %30, i32* %3, align 4
  br label %33

31:                                               ; preds = %2
  %32 = load i32, i32* %6, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %26
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @name_to_handle_at_loop(i32, i8*, i32*, i32*, i32) #1

declare dso_local i64 @IN_SET(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @fd_fdinfo_mnt_id(i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
